# epsock

./: .gitignore  README.md  client.py  pyproject.toml  server.py  test.py
iosock/: __init__.py  abstract.py
iosock/darwin/: __init__.py  client.py
iosock/linux/: __init__.py  client.py  epollserver.py  relayserver.py  server.py
iosock/server/: __init__.py
